--- a/Project_Manager/templates/includes/header-team-conf.html
+++ b/Project_Manager/templates/includes/header-team-conf.html
@@ -38,6 +38,7 @@
                 {% if team.author == request.user %}
                 <li><a href="{% url 'teams:delete_team' team.id %}?trigger=detail" class="text-red-500 hover:text-white hover:bg-red-500"><i class="fas fa-trash mr-2"></i>Удалить</a></li>
                 {% else %}
+                <li><a href="{% url 'teams:leave_from_team' team.id %}?trigger=detail" class="text-red-500 hover:text-white hover:bg-red-500"><i class="fas fa fa-user-times mr-2"></i>Покинуть команду</a></li>
                 {% endif %}
             </ul>
         </div>
