--- a/Project_Manager/templates/teams/includes/team_members.html
+++ b/Project_Manager/templates/teams/includes/team_members.html
@@ -37,10 +37,13 @@
         </div>
 
         <div class="flex-none">
+            {% if your_role >= ROLE_PRIORITY.ADMIN %}
             <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="add_team_member_modal.showModal();">
                 Добавить участников
             </button>
             {% include 'teams/includes/add-team-member.html' %}
+            {% else %}
+            {% endif %}
         </div>
     </div>
 
