--- a/Project_Manager/templates/projects/includes/member.html
+++ b/Project_Manager/templates/projects/includes/member.html
@@ -7,6 +7,7 @@
         <td class="py-1 px-6 text-left">{{ member.email|default:"---" }}</td>
         <td class="py-1 px-6 text-left">{{ member.projects_count }}</td>
         <td class="py-1 px-6 text-left">
+            {% if member != team.author and your_role >= ROLE_PRIORITY.ADMIN %}
             <div class="dropdown">
                 <div tabindex="0" role="button" class="btn m-1 bg-gray-100 text-gray-800 rounded-2xl border-gray-400 hover:bg-gray-50 hover:border-sky-600 shadow-md">{{member.members_teams.first.get_role_display}} <i class='fas fa-angle-down mt-1'></i></div>
                 <ul tabindex="0" class="dropdown-content menu bg-white border border-gray-300 rounded-box z-[1] w-52 p-2 shadow-sm">
@@ -23,8 +24,12 @@
                 {% endfor %}
                 </ul>
             </div>
+            {% else %}
+            <div tabindex="0" role="button" class="btn m-1 bg-gray-100 text-gray-800 rounded-2xl border-gray-400 hover:bg-gray-50 hover:border-sky-600 shadow-md">{{member.members_teams.first.get_role_display}} </div>
+            {% endif %}
         </td>
         <td class="py-1 px-6 text-left">{{ member.date_joining }}</td>
+        {% if member != request.user and member != team.author and your_role >= ROLE_PRIORITY.ADMIN %}
         <td class="" title="Исключить из проекта">
             <a 
             hx-post="{% url 'teams:projects:delete_project_members' project.team.pk project.pk member.pk %}"
@@ -34,5 +39,8 @@
                 <i class="fa fa-trash"></i>
             </a>
         </td>
+        {% else %}
+        <td></td>
+        {% endif %}
     </tr>
 {% endfor %}
