--- a/Project_Manager/templates/projects/includes/tags.html
+++ b/Project_Manager/templates/projects/includes/tags.html
@@ -37,10 +37,12 @@
     </div>
 
     <div class="flex-none">
-      <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="modal_create_tag.showModal();">
+        {% if your_role >= ROLE_PRIORITY.MEMBER %}
+        <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="modal_create_tag.showModal();">
           Создать тег
       </button>
       {% include 'tasks/includes/add-tag-modal.html' %}
+      {% endif %}
     </div>
 
   </div>
