--- a/Project_Manager/templates/projects/includes/status.html
+++ b/Project_Manager/templates/projects/includes/status.html
@@ -5,6 +5,7 @@
 <td class="py-3 px-6 text-left font-bold text-base">{{status.color}}</td>
 <td class="py-3 px-6 text-left font-bold text-base">{{status.is_completed|yesno:"Да,Нет"}}</td>
 <td class="py-1 px-4 text-left">
+    {% if your_role >= ROLE_PRIORITY.MANAGER %}
     <a 
         class="block text-red-600 hover:bg-red-500 hover:text-white rounded-xl px-5 py-4 cursor-pointer transition" 
         title="Удалить статус"
@@ -15,4 +16,5 @@
     >
         <i class="fa fa-trash"></i>
     </a>
+    {% endif %}
 </td>
