--- a/Project_Manager/templates/projects/includes/statuses.html
+++ b/Project_Manager/templates/projects/includes/statuses.html
@@ -37,10 +37,12 @@
     </div>
 
     <div class="flex-none">
+      {% if your_role >= ROLE_PRIORITY.MANAGER %}
       <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="modal_create_status.showModal();">
           Добавить статус
       </button>
       {% include 'projects/includes/create-status.html' %}
+      {% endif %}
     </div>
 
   </div>
