--- a/Project_Manager/templates/tasks/includes/change-status.html
+++ b/Project_Manager/templates/tasks/includes/change-status.html
@@ -3,6 +3,7 @@
     
 
 <div class="dropdown" id="status-{{ task.pk }}">
+    {% if your_role >= ROLE_PRIORITY.MEMBER %}
     <div tabindex="0" role="button" class="px-3 py-1 rounded-lg {{ task.status.color.bg_color }} text-sm font-medium {{ task.status.color.text_color }} border {{ task.status.color.border_color }}">
         {{ task.status }}
         <i class="fas fa-angle-down ml-1 mt-1"></i>
@@ -32,6 +33,11 @@
             </a>
         </li>
     </ul>
+    {% else %}
+    <div tabindex="0" role="button" class="px-3 py-1 rounded-lg {{ task.status.color.bg_color }} text-sm font-medium {{ task.status.color.text_color }} border {{ task.status.color.border_color }}">
+        {{ task.status }}
+    </div>
+    {% endif %}
 </div>
 
 <script>
