--- a/Project_Manager/templates/tasks/includes/header-detail-task.html
+++ b/Project_Manager/templates/tasks/includes/header-detail-task.html
@@ -20,11 +20,13 @@
           <div id="task-name-input" class="hidden w-full">
             {{ task_form.name }}
           </div>
-  
+
+          {% if your_role >= ROLE_PRIORITY.MEMBER %}
           <!-- Кнопка редактирования -->
           <button type="button" id="edit-button" class="text-blue-600">
             <i class="fas fa-pen text-sm"></i>
           </button>
+          {% endif %}
   
           <!-- Кнопки подтверждения и отмены -->
           <div id="edit-actions" class="hidden flex space-x-2">
@@ -94,7 +96,8 @@
             <a><i class="fas fa-history mr-2"></i>История изменений</a>
         </li>
         <li>
-            <a class="text-red-500 hover:text-white hover:bg-red-500"
+          {% if your_role >= ROLE_PRIORITY.MANAGER %}
+          <a class="text-red-500 hover:text-white hover:bg-red-500"
             hx-post="{% url_task task 'task_delete' %}"
             hx-vals='{"detail_task_pk": "{{task.pk}}"}'
             {% if task.parent_task %}
@@ -106,6 +109,7 @@
             >
             <i class="fas fa-trash mr-2"></i>Удалить
             </a>
+            {% endif %}
         </li>
     </ul>
 </div>
