--- a/Project_Manager/templates/tasks/includes/task.html
+++ b/Project_Manager/templates/tasks/includes/task.html
@@ -84,6 +84,7 @@
                     </a>
                 </li>   
                 <li>
+                    {% if your_role >= ROLE_PRIORITY.MANAGER %}
                     <a class="text-red-600 hover:bg-red-500 hover:text-white flex items-center gap-2"
                        hx-post="{% url_task task 'task_delete' %}"
                        hx-vals='{"task_pk": "{{task.pk}}"}'
@@ -93,6 +94,7 @@
                         <i class="fas fa-trash-alt"></i>
                         Удалить
                     </a>
+                    {% endif %}
                 </li>
             </ul>
         </div>
