--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -72,6 +72,13 @@
         {% if unread_notifications %}<span class="indicator-item mt-2 badge badge-secondary">{{unread_notifications}}</span>{%else%}{%endif%}
         Уведомления
       </a>
+    </div><br>
+    
+    <div class="indicator width-max">
+      <a href="{% url 'history' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">
+        {% if unread_notifications %}<span class="indicator-item mt-2 badge badge-secondary">{{unread_notifications}}</span>{%else%}{%endif%}
+        История
+      </a>
     </div>
 
   </nav>
