--- a/Project_Manager/templates/invitations.html
+++ b/Project_Manager/templates/invitations.html
@@ -9,24 +9,8 @@
       <div class="flex items-center gap-x-4 text-2xl font-semibold text-black">
         <div class="btn-group">
             <div class="flex gap-2">
-                <a hx-get="{% url 'users:new_notification_list' 0 %}" hx-vals='{"type": "new"}' hx-target="#list-content" data-value="new" class="btn btn-outline btn-primary btn-active btn-md">Новые</a>
-                <a hx-get="{% url 'users:invitation_list' %}" hx-target="#list-content" data-value="invites" class="btn btn-outline btn-primary btn-md">Приглашения</a>
-                <a hx-get="{% url 'users:new_notification_list' 1 %}" hx-vals='{"type": "read"}' hx-target="#list-content" data-value="read" class="btn btn-outline btn-primary btn-md">Прочитанные</a>
+                <a hx-get="" hx-target="#list-content" data-value="invites" class="btn btn-outline btn-primary btn-md btn-active">Приглашения</a>
               </div>
-              
-              <script>
-                const buttons = document.querySelectorAll('[data-value]');
-                buttons.forEach(btn => {
-                  btn.addEventListener('click', () => {
-                    buttons.forEach(b => {
-                      b.classList.add('btn-outline');
-                      b.classList.remove('btn-active');
-                    });
-                    btn.classList.remove('btn-outline');
-                  });
-                });
-              </script>
-              
           </div>          
       </div>
       
@@ -70,7 +54,7 @@
     <!-- Контейнер списка -->
     <div id="list" class="space-y-3">
         
-            {% include 'users/includes/notifications_list.html' %}
+            {% include 'users/includes/invitation_list.html' %}
       
     </div>
 </div>
