--- a/Project_Manager/templates/history.html
+++ b/Project_Manager/templates/history.html
@@ -1,9 +1,74 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="mx-auto px-4 py-6">
-    <h1 class="text-2xl font-bold mb-6 text-center">История действий</h1>
-    
+<div class="mx-auto px-2 py-4">
+    <form method="get"
+    hx-get="{% url 'history_filter' %}"
+    hx-target="#lsts"
+    class="w-full hidden" 
+    id="filterForm"
+    >
+    <div class="flex gap-6 bg-white border border-gray-200 shadow-sm rounded-2xl p-6">
+
+      <div class="flex flex-col w-full sm:w-1/5 min-w-[140px]">
+        <label class="text-sm text-gray-500 mb-1">Команды</label>
+        <select name="team" class="select select-bordered bg-gray-50 text-gray-700 focus:border-blue-500">
+          <option value="">Все</option>
+          {% for team in teams %}
+          <option value="{{team.pk}}">{{team.name}}</option>
+          {% endfor %}
+        </select>
+      </div>
+  
+      <div class="flex flex-col w-full sm:w-1/5 min-w-[140px]">
+        <label class="text-sm text-gray-500 mb-1">Проекты</label>
+        <select name="project" class="select select-bordered bg-gray-50 text-gray-700 focus:border-blue-500">
+          <option value="">Все</option>
+          {% for project in projects %}
+          <option value="{{project.pk}}">{{project.name}}</option>
+          {% endfor %}
+        </select>
+      </div>
+  
+      <div class="flex flex-col w-full sm:w-1/5 min-w-[140px]">
+        <label class="text-sm text-gray-500 mb-1">Задачи</label>
+        <select name="task" class="select select-bordered bg-gray-50 text-gray-700 focus:border-blue-500">
+          <option value="">Все</option>
+          {% for task in tasks %}
+          <option value="{{task.pk}}">{{task}}</option>
+          {% endfor %}
+        </select>
+      </div>
+  
+      <div class="flex flex-col w-full sm:w-1/5 min-w-[140px]">
+        <label class="text-sm text-gray-500 mb-1">Действие</label>
+        <select name="action_type" class="select select-bordered bg-gray-50 text-gray-700 focus:border-blue-500">
+          <option value="">Все</option>
+          {% for action, action_name in action_types %}
+            {% if 'action_type' in request.GET %}
+            <option value="{{action}}">{{action_name}}</option>
+                {{action_types}}.{{request.GET.action_type}}
+            {% else %}
+            <option value="{{action}}">{{action_name}}</option>
+            {% endif %}
+          {% endfor %}
+        </select>
+      </div>
+  
+      <div class="flex items-end w-full sm:w-1/5 min-w-[140px]">
+        <div class="flex w-full gap-1">
+          <button type="reset" name="reset" value="1" class="btn btn-outline text-black w-1/2 shadow-sm text-sm hover:text-white hover:bg-neutral-700">
+            Сбросить
+          </button>
+          <button type="submit" class="btn btn-primary w-1/2 text-white shadow-sm text-sm">
+            Применить
+          </button>
+        </div>
+      </div>
+
+    </div>
+  </form>
+    <h1 class="text-2xl font-bold my-6 text-center">История действий</h1>
     <!-- Основной контейнер с относительным позиционированием -->
     <div class="relative mb-1">
         <!-- Контейнер для кнопок (абсолютное позиционирование слева) -->
@@ -44,11 +109,26 @@
                 </svg>
             </div>
         </div>
+        <button onclick="showFilter(this);" class="btn btn-outline border-gray-400 text-gray-700 hover:bg-gray-100">
+            Добавить фильтры
+        </button>
+
     </div>
 
-    <div class="space-y-4 max-w-4xl mx-auto">
+    <div id="lsts" class="space-y-4 max-w-4xl mx-auto">
         {% include 'history_list.html' %}
     </div>
 </div>
+
+<script>
+
+    function showFilter(btn){
+      const filterForm = document.getElementById('filterForm');
+      const isHidden = filterForm.classList.toggle('hidden');
+  
+      btn.innerText = isHidden ? 'Добавить фильтры': 'Скрыть фильтры'
+    }
+  
+</script>
 
 {% endblock content %}
