--- a/Project_Manager/templates/invitations.html
+++ b/Project_Manager/templates/invitations.html
@@ -23,7 +23,7 @@
                   placeholder="Поиск..." 
                   class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
                   hx-get="{% url 'users:search_notifications' %}"
-                  hx-target="#list-content"
+                  hx-target="#invitation-list-content"
                   hx-trigger="keyup delay:300ms"
               />
               <svg 
