--- a/Project_Manager/templates/users/includes/invitation_list.html
+++ b/Project_Manager/templates/users/includes/invitation_list.html
@@ -13,7 +13,7 @@
       <div class="flex-1 min-w-0">
 
         <div>
-          <h3 class="text-lg font-semibold text-gray-800 truncate">Вам пришло приглашение в "<a href="{% url 'users:accept_invitation' invitation.id %}" class="text-blue-500 visited:text-red-700">{{ invitation.team }}</a>" от <a href="">{{ invitation.invited_by }}</a></h3>
+          <h3 class="text-lg font-semibold text-gray-800 truncate">Вам пришло приглашение на вступление в команду "<a href="{% url 'users:accept_invitation' invitation.id %}" class="text-blue-500 visited:text-red-700">{{ invitation.team.name }}</a>" от <a href="">{{ invitation.invited_by }}</a></h3>
         </div>
 
         <div class="flex flex-wrap items-center gap-x-4 gap-y-2 mt-2 text-sm text-gray-500">
