--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="indicator width-max">
-      <a href="{% url 'history' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">
+      <a href="{% url 'logs:history' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">
         История
       </a>
     </div><br>
