--- a/Project_Manager/templates/tasks/includes/header-tasks.html
+++ b/Project_Manager/templates/tasks/includes/header-tasks.html
@@ -54,7 +54,7 @@
                 <i class="fas fa-tasks mr-2"></i> Статусы
             </a></li>
             
-            <li><a>
+            <li><a href="{% url 'logs:project_history' project.team.pk project.pk %}">
                 <i class="fas fa-history mr-2"></i> История изменений
             </a></li>
             
